Fixed typo in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ cache: npm
 install:
   - npm ci
 script:
-  - npn run build
+  - npm run build
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github_token: $GITHUB_TOKEN  
   keep_history: true
   local_dir: public
   target_branch: gh-pages
