--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "axios": "0.18.1",
     "axios-cache-adapter": "^2.5.0",
     "axios-extensions": "^3.1.3",
+    "localforage": "^1.9.0",
+    "localforage-memoryStorageDriver": "^0.9.2",
+    "redis": "^3.0.2",
     "sirv-cli": "^1.0.0"
   }
 }
